--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
+    "lottie-react-native": "^6.4.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
